# Auticuro

./: .gitignore  .rusty-hook.toml  404.html  Cargo.toml  Contribution.md  README.md  catalog-info.yaml  index.html  sitemap.xml
.github/workflows/: deploy-gh-pages.yml  doc.yml
assets/css/: styles.6dc9aec6.css
assets/js/: 0529fecd.65128e1e.js  0e384e19.ac6106d6.js  0f346831.83fce26d.js  14cbc0bf.0cca80d6.js  14eb3368.a99b74d3.js  168e3c99.a9ac28a5.js  17896441.6819adc9.js  187c050c.934bb919.js  1acee7b5.9d0c17d0.js  1be78505.8fe24841.js  1f391b9e.cd8b53f8.js  210.8a76dede.js  24d8de23.6c5bfcfc.js  2e08310d.5b162109.js  32527f16.cd09932d.js  36114835.ce72319e.js  393be207.731b3a3c.js  3b654b3a.23672f6f.js  3d476654.915200ff.js  3d56cdde.1089b72d.js  3e054493.ffe628ff.js  3eb25e89.d7c965bc.js  412.8df7fc05.js  41e92cf9.d9dded32.js  456cc2af.202b05e2.js  499b4e65.d3707ae5.js  500b59e0.1d38812b.js  5117bf57.b4a18d1e.js  572fe877.c855b429.js  657f9e3c.96f5aa32.js  7e90cfa8.19f5b671.js  7f497040.692ba4df.js  8005e4d8.7450eb29.js  814f3328.d042c4de.js  905d2198.d838ac5e.js  90be8c8a.aafbfa6a.js  935f2afb.7fb582d3.js  95180db5.74f88fb9.js  9e4087bc.d8217504.js  a4215e78.b350c573.js  (+24 more)
auticuro-documentation/: .gitignore  .gitlab-ci.yml  README.md  docusaurus.config.js
auticuro-documentation/blog/: authors.yml
auticuro-documentation/blog/2023-04-19-How-to-design-a-wallet-service/: index.md
auticuro-documentation/docs/: FAQ.md  Quick Start.md  ReleaseNotes.md  intro.md
auticuro-documentation/docs/API Doc/: Account Structure.md  _category_.json
auticuro-documentation/docs/Design/: Architecture Overview.md  Command Side.md  Design Decisions.md  Distributed Transaction.md  QuerySide.md  _category_.json
auticuro-documentation/docs/Evaluation/: Overview.md  _category_.json
auticuro-documentation/docs/FAQ/: _category_.json
auticuro-documentation/docs/Get Started/: Quick Start.md  _category_.json
auticuro-documentation/docs/Introduction/: Features.md  Use Cases.md  _category_.json
auticuro-documentation/docs/Release Notes/: Placeholder.md  _category_.json
auticuro-documentation/src/css/: custom.css
auticuro-documentation/src/pages/: index.js
blog/: atom.xml  index.html  rss.xml
blog/How to design a wallet service/: index.html
blog/archive/: index.html
dependencies/hologram-protos/: .gitignore  Cargo.toml  build.rs
dependencies/hologram-protos/src/: lib.rs
dependencies/hologram-protos/src/proto/firm_wallet/: account_management_servicepb.proto  accountpb.proto  balance_operation_servicepb.proto  commonpb.proto  errorpb.proto  internal_servicepb.proto
dependencies/infra-common/: .gitignore  Cargo.toml
dependencies/infra-common/gateway_framework/: Cargo.toml
dependencies/infra-common/gateway_framework/src/: gateway.rs  lib.rs  raft_cluster.rs
dependencies/infra-common/kvproto/: Cargo.toml
dependencies/infra-common/kvproto/proto/: raft_serverpb.proto  tikvpb.proto
dependencies/infra-common/kvproto/src/: lib.rs
dependencies/infra-common/postgres_utils/: Cargo.toml
dependencies/infra-common/postgres_utils/src/: lib.rs
dependencies/infra-common/postgres_utils/src/connection/: config.rs  mod.rs  postgres_connection_wrapper.rs
dependencies/infra-common/postgres_utils/src/persist_framework/: mod.rs  persist_thread.rs
dependencies/infra-common/src/: lib.rs
dependencies/tiny-mq/: Cargo.toml
dependencies/tiny-mq/kvproto/: Cargo.toml  build.rs
dependencies/tiny-mq/kvproto/proto/: errorpb.proto  kvrpcpb.proto  metapb.proto  mqpb.proto  raft_cmdpb.proto
dependencies/tiny-mq/kvproto/src/: lib.rs
dependencies/tiny-mq/src/: apply.rs  bootstrap.rs  cmd_resp.rs  errors.rs  keys.rs  kv.rs  lib.rs  main.rs  message_queue_adapter.rs  metrics.rs  msg.rs  node.rs  peer.rs  peer_storage.rs  raft_client.rs  raftkv.rs  raftlog_gc.rs  rocks_engine.rs  server.rs  setup.rs  startup.rs  status_server.rs  storage.rs  store.rs  util.rs
dependencies/tiny-mq/tikv-util/: Cargo.toml
dependencies/tiny-mq/tikv-util/src/: future.rs  keybuilder.rs  lib.rs  log.rs  lru.rs  macros.rs  thread_group.rs  time.rs  timer.rs
dependencies/tiny-mq/tikv-util/src/logger/: formatter.rs  mod.rs
dependencies/tiny-mq/tikv-util/src/worker/: metrics.rs  mod.rs  pool.rs
dependencies/tiny-mq/tikv-util/src/yatp_pool/: future_pool.rs  metrics.rs  mod.rs
dockerfiles/firm-wallet-gateway/: Dockerfile  entrypoint.sh
dockerfiles/firm-wallet-service/: Dockerfile  entrypoint.sh
docs/: api.md  configuration.md  quickstart.md
docs/API Doc/Account Structure/: index.html
docs/Design/Architecture Overview/: index.html
docs/Design/Command Side/: index.html
docs/Design/Design Decisions/: index.html
docs/Design/QuerySide/: index.html
docs/Evaluation/Overview/: index.html
docs/FAQ/: index.html
docs/Introduction/Features/: index.html
docs/Introduction/Use Cases/: index.html
docs/Quick Start/: index.html
docs/ReleaseNotes/: index.html
docs/category/account-management-apis/: index.html
docs/category/api-doc/: index.html
docs/category/balance-operation-apis/: index.html
docs/category/chaos-test/: index.html
docs/category/dependability/: index.html
docs/category/design/: index.html
docs/intro/: index.html
firm-wallet-gateway/: .env  Cargo.toml  README.md  run_gateway.sh
firm-wallet-gateway/src/: firm_wallet_gateway.rs  main.rs
firm-wallet-service/: Cargo.toml  run_node.sh
firm-wallet-service/src/: account.rs  balance_calculator.rs  config.rs  gc.rs  internal.rs  main.rs  message_broker.rs  metrics.rs  rocksdb_state.rs  service.rs  start_up.rs  state_machine.rs  test.rs  utils.rs
firm-wallet-service/src/errors/: account_management_error.rs  balance_operation_error.rs  common_error.rs  general_error.rs  internal_error.rs  mod.rs
kvproto/: Cargo.toml  build.rs
kvproto/proto/: kvrpcpb.proto  raft_cmdpb.proto  tikvpb.proto
kvproto/src/: lib.rs
markdown-page/: index.html
scripts/: get_leader.sh  install_for_mac.sh  install_for_ubuntu.sh  run_test_coverage.sh  setup_for_mac.sh  setup_for_ubuntu.sh  start_cluster.sh  transfer_example.sh
(+55 files in other folders)
