[package]
name = "firm-wallet-gateway"
authors = ["Haoran.Xuan@airwallex.com"]
version = "0.1.0"
edition = "2018"

[[bin]]
name = "firm-wallet-gateway"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kvproto = { path = "../kvproto" }
hologram_protos ={ version = "0.1.0", git ="https://gitlab.awx.im/financial_platform/the-hologram/hologram-protos.git", branch ="master"}
gateway_framework ={ version = "0.1.0", git = "https://gitlab.awx.im/financial_platform/the-hologram/infra-common.git", branch = "master"}

# tokio async tool
tokio = { version = "1.17", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1"

# tonic grpc client & server
tonic = { version = "0.5.2", features = ["tls"] }
tower = "0.4.7"

# tools
dotenv = "0.15.0"
thiserror = "1.0"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
rusty-hook = "^0.11.2"

