[package]
name = "firm-wallet-service"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "firm-wallet-service"
path = "src/main.rs"

[dependencies]
byteorder = "1.2"
protobuf = "2"
lazy_static = "1.3"
futures = { version = "0.3", features = ["thread-pool", "compat"] }
prometheus = { version = "0.12", features = ["nightly"] }
prometheus-static-metric = "0.5"
slog = { version = "2.2", features = ["max_level_trace"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored"] }
hologram_kv = { version = "0.1.0", path = "../dependencies/tiny-mq" }
tikv-util = { version = "0.1.0", path = "../dependencies/tiny-mq/tikv-util" }
bigdecimal = "0.3.0"
thiserror = "1.0"
hologram_protos ={ version = "0.1.0", path ="../dependencies/hologram-protos"}
rand = "0.8"

[dev-dependencies]
rusty-hook = "^0.11.2"
