[package]
name = "hologram_kv"
version = "0.1.0"
edition = "2018"

[lib]
name = "hologram_kv"
path = "src/lib.rs"

[[bin]]
name = "hologram_kv"
path = "src/main.rs"

[features]
default = ["protobuf-codec", "default-logger"]
protobuf-codec = [
    "protobuf/bytes",
    "raft/protobuf-codec",
    "raft-proto/protobuf-codec",
    "grpcio/protobuf-codec",
]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

# Make sure to synchronize updates with Harness.
[dependencies]
bytes = { version = "1" }
fxhash = "0.2.1"
fail = { version = "0.4" }
getset = "0.1.1"
protobuf = "2"
prost = "0.8"
thiserror = "1.0"
rand = "0.8"
slog = { version = "2.2", features = ["max_level_trace"] }
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.4.0", optional = true }
slog-async = "2.3.0"
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-json = "2.3"
raft = { git = "https://github.com/GlenGeng/raft-rs.git", default-features = false, branch = "awx" }
raft-proto = { git = "https://github.com/GlenGeng/raft-rs.git", default-features = false, branch = "awx" }
regex = "1"

byteorder = "1.2"
kvproto = { version = "0.1.0", path = "kvproto" }
tikv-util = { version = "0.1.0", path = "tikv-util" }

tempfile = "3.0"
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored"] }
crossbeam = "0.8"
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
bitflags = "1.0.1"
time = "0.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
derivative = "2"

nix = "0.11"
libc = "0.2"

prometheus = { version = "0.12", features = ["nightly"] }
prometheus-static-metric = "0.5"
lazy_static = "1.3"
tokio = { version = "1.5", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rusty-hook = "^0.11.2"

[dependencies.rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"
features = ["portable", "static_libcpp"]
rev = "c616c676823e48b050a41a07eb8eb9676a259b52"

[target.'cfg(unix)'.dependencies]
signal = "0.6"
