[package]
name = "tikv-util"
version = "0.1.0"
edition = "2018"

[dependencies]
async-speed-limit = "0.3"
lazy_static = "1.3"
time = "0.1"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-executor = "0.1"
tokio-timer = "0.2"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.3"
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-json = "2.3"
slog-term = "2.4"
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
prometheus = { version = "0.12", features = ["nightly"] }
yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
fail = "0.4"